# ai_agent

./: .env  Chinook.db  lab3_rag.ipynb  lab4_mcp2.py  prompt_TP_chef_personnel.ipynb  promt.ipynb  promt_TP3.ipynb  pyproject.toml
