[project]
name = "tp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "display>=1.0.0",
    "ipykernel>=7.2.0",
    "ipython>=9.14.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]
